Agregamos sonido de fondo un fondo de personas caminando en la lluvia

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="grid">
     <div class="grid__up">
       <h1>Mis Tareas</h1>
+      <div id="play">Play</div>
     </div>
     <div class="grid__edit-tareas editor">
       <p class="editor__p editor__general">Editor de tareas</p>
